project/grammar/JavaParser.g4
grammar JavaParser;

options {
	tokenVocab = JavaLexer;
}

// starting point for parsing a java file

compilationUnit
:
	packageDeclaration? importDeclaration* typeDeclaration* EOF
;

packageDeclaration
:
	annotation* 'package' qualifiedName ';'
;

importDeclaration
:
	'import' 'static'? qualifiedName
	(
		'.' '*'
	)? ';'
;

typeDeclaration
:
	classOrInterfaceModifier* classDeclaration
	| classOrInterfaceModifier* enumDeclaration
	| classOrInterfaceModifier* interfaceDeclaration
	| classOrInterfaceModifier* annotationTypeDeclaration
	| ';'
;

modifier
:
	classOrInterfaceModifier
	|
	(
		'native'
		| 'synchronized'
		| 'transient'
		| 'volatile'
	)
;

classOrInterfaceModifier
:
	annotation // class or interface

	|
	(
		'public' // class or interface

		| 'protected' // class or interface

		| 'private' // class or interface

		| 'static' // class or interface

		| 'abstract' // class or interface

		| 'final' // class only -- does not apply to interfaces

		| 'strictfp' // class or interface

	)
;

variableModifier
:
	'final'
	| annotation
;

classDeclaration
:
	'class' Identifier typeParameters?
	(
		'extends' type
	)?
	(
		'implements' typeList
	)? classBody
;

typeParameters
:
	'<' typeParameter
	(
		',' typeParameter
	)* '>'
;

typeParameter
:
	Identifier
	(
		'extends' typeBound
	)?
;

typeBound
:
	type
	(
		'&' type
	)*
;

enumDeclaration
:
	ENUM Identifier
	(
		'implements' typeList
	)? '{' enumConstants? ','? enumBodyDeclarations? '}'
;

enumConstants
:
	enumConstant
	(
		',' enumConstant
	)*
;

enumConstant
:
	annotation* Identifier arguments? classBody?
;

enumBodyDeclarations
:
	';' classBodyDeclaration*
;

interfaceDeclaration
:
	'interface' Identifier typeParameters?
	(
		'extends' typeList
	)? interfaceBody
;

typeList
:
	type
	(
		',' type
	)*
;

classBody
:
	'{' classBodyDeclaration* '}'
;

interfaceBody
:
	'{' interfaceBodyDeclaration* '}'
;

classBodyDeclaration
:
	';'
	| 'static'? block
	| modifier* memberDeclaration
;

memberDeclaration
:
	methodDeclaration
	| genericMethodDeclaration
	| fieldDeclaration
	| constructorDeclaration
	| genericConstructorDeclaration
	| interfaceDeclaration
	| annotationTypeDeclaration
	| classDeclaration
	| enumDeclaration
;

/* We use rule this even for void methods which cannot have [] after parameters.
   This simplifies grammar and we can consider void to be a type, which
   renders the [] matching as a context-sensitive issue or a semantic check
   for invalid return type after parsing.
 */
methodDeclaration
:
	(
		type
		| 'void'
	) Identifier formalParameters
	(
		'[' ']'
	)*
	(
		'throws' qualifiedNameList
	)?
	(
		methodBody
		| ';'
	)
;

genericMethodDeclaration
:
	typeParameters methodDeclaration
;

constructorDeclaration
:
	Identifier formalParameters
	(
		'throws' qualifiedNameList
	)? constructorBody
;

genericConstructorDeclaration
:
	typeParameters constructorDeclaration
;

fieldDeclaration
:
	type variableDeclarators ';'
;

interfaceBodyDeclaration
:
	modifier* interfaceMemberDeclaration
	| ';'
;

interfaceMemberDeclaration
:
	constDeclaration
	| interfaceMethodDeclaration
	| genericInterfaceMethodDeclaration
	| interfaceDeclaration
	| annotationTypeDeclaration
	| classDeclaration
	| enumDeclaration
;

constDeclaration
:
	type constantDeclarator
	(
		',' constantDeclarator
	)* ';'
;

constantDeclarator
:
	Identifier
	(
		'[' ']'
	)* '=' variableInitializer
;

// see matching of [] comment in methodDeclaratorRest

interfaceMethodDeclaration
:
	(
		type
		| 'void'
	) Identifier formalParameters
	(
		'[' ']'
	)*
	(
		'throws' qualifiedNameList
	)? ';'
;

genericInterfaceMethodDeclaration
:
	typeParameters interfaceMethodDeclaration
;

variableDeclarators
:
	variableDeclarator
	(
		',' variableDeclarator
	)*
;

variableDeclarator
:
	variableDeclaratorId
	(
		'=' variableInitializer
	)?
;

variableDeclaratorId
:
	Identifier
	(
		'[' ']'
	)*
;

variableInitializer
:
	arrayInitializer
	| expression
;

arrayInitializer
:
	'{'
	(
		variableInitializer
		(
			',' variableInitializer
		)*
		(
			','
		)?
	)? '}'
;

enumConstantName
:
	Identifier
;

type
:
	classOrInterfaceType
	(
		'[' ']'
	)*
	| primitiveType
	(
		'[' ']'
	)*
;

classOrInterfaceType
:
	Identifier typeArguments?
	(
		'.' Identifier typeArguments?
	)*
;

primitiveType
:
	'boolean'
	| 'char'
	| 'byte'
	| 'short'
	| 'int'
	| 'long'
	| 'float'
	| 'double'
;

typeArguments
:
	'<' typeArgument
	(
		',' typeArgument
	)* '>'
;

typeArgument
:
	type
	| '?'
	(
		(
			'extends'
			| 'super'
		) type
	)?
;

qualifiedNameList
:
	qualifiedName
	(
		',' qualifiedName
	)*
;

formalParameters
:
	'(' formalParameterList? ')'
;

formalParameterList
:
	formalParameter
	(
		',' formalParameter
	)*
	(
		',' lastFormalParameter
	)?
	| lastFormalParameter
;

formalParameter
:
	variableModifier* type variableDeclaratorId
;

lastFormalParameter
:
	variableModifier* type '...' variableDeclaratorId
;

methodBody
:
	block
;

constructorBody
:
	block
;

qualifiedName
:
	Identifier
	(
		'.' Identifier
	)*
;

literal
:
	IntegerLiteral
	| FloatingPointLiteral
	| CharacterLiteral
	| StringLiteral
	| BooleanLiteral
	| 'null'
;

// ANNOTATIONS

annotation
:
	'@' annotationName
	(
		'('
		(
			elementValuePairs
			| elementValue
		)? ')'
	)?
;

annotationName
:
	qualifiedName
;

elementValuePairs
:
	elementValuePair
	(
		',' elementValuePair
	)*
;

elementValuePair
:
	Identifier '=' elementValue
;

elementValue
:
	expression
	| annotation
	| elementValueArrayInitializer
;

elementValueArrayInitializer
:
	'{'
	(
		elementValue
		(
			',' elementValue
		)*
	)?
	(
		','
	)? '}'
;

annotationTypeDeclaration
:
	'@' 'interface' Identifier annotationTypeBody
;

annotationTypeBody
:
	'{'
	(
		annotationTypeElementDeclaration
	)* '}'
;

annotationTypeElementDeclaration
:
	modifier* annotationTypeElementRest
	| ';' // this is not allowed by the grammar, but apparently allowed by the actual compiler

;

annotationTypeElementRest
:
	type annotationMethodOrConstantRest ';'
	| classDeclaration ';'?
	| interfaceDeclaration ';'?
	| enumDeclaration ';'?
	| annotationTypeDeclaration ';'?
;

annotationMethodOrConstantRest
:
	annotationMethodRest
	| annotationConstantRest
;

annotationMethodRest
:
	Identifier '(' ')' defaultValue?
;

annotationConstantRest
:
	variableDeclarators
;

defaultValue
:
	'default' elementValue
;

// STATEMENTS / BLOCKS

block
:
	'{'
	(
		blockStatement
	)* '}'
;

//
// --- JQUERY BLOCK ---
//

blockStatement
:
	localVariableDeclarationStatement
	| statement
	| typeDeclaration
;

localVariableDeclarationStatement
:
	localVariableDeclaration ';'
;

localVariableDeclaration
:
	variableModifier* type variableDeclarators
;

statement
:
	block
	| ASSERT expression
	(
		':' expression
	)? ';'
	| 'if' parExpression statement
	(
		'else' statement
	)?
	| 'for' '(' forControl ')' statement
	| 'while' parExpression statement
	| 'do' statement 'while' parExpression ';'
	| 'try' block
	(
		catchClause+ finallyBlock?
		| finallyBlock
	)
	| 'try' resourceSpecification block catchClause* finallyBlock?
	| 'switch' parExpression '{' switchBlockStatementGroup* switchLabel* '}'
	| 'synchronized' parExpression block
	| 'return' expression? ';'
	| 'throw' expression ';'
	| 'break' Identifier? ';'
	| 'continue' Identifier? ';'
	| ';'
	| statementExpression ';'
	| Identifier ':' statement
;

catchClause
:
	'catch' '(' variableModifier* catchType Identifier ')' block
;

catchType
:
	qualifiedName
	(
		'|' qualifiedName
	)*
;

finallyBlock
:
	'finally' block
;

resourceSpecification
:
	'(' resources ';'? ')'
;

resources
:
	resource
	(
		';' resource
	)*
;

resource
:
	variableModifier* classOrInterfaceType variableDeclaratorId '=' expression
;

/** Matches cases then statements, both of which are mandatory.
 *  To handle empty cases at the end, we add switchLabel* to statement.
 */
switchBlockStatementGroup
:
	switchLabel+ blockStatement+
;

switchLabel
:
	'case' constantExpression ':'
	| 'case' enumConstantName ':'
	| 'default' ':'
;

forControl
:
	enhancedForControl
	| forInit? ';' expression? ';' forUpdate?
;

forInit
:
	localVariableDeclaration
	| expressionList
;

enhancedForControl
:
	variableModifier* type variableDeclaratorId ':' expression
;

forUpdate
:
	expressionList
;

// EXPRESSIONS

parExpression
:
	'(' expression ')'
;

expressionList
:
	expression
	(
		',' expression
	)*
;

statementExpression
:
	expression
;

constantExpression
:
	expression
;

expression
:
	primary
	| expression '.' Identifier
	| expression '.' 'this'
	| expression '.' 'new' nonWildcardTypeArguments? innerCreator
	| expression '.' 'super' superSuffix
	| expression '.' explicitGenericInvocation
	| expression '[' expression ']'
	| expression '(' expressionList? ')'
	| 'new' creator
	| '(' type ')' expression
	| expression
	(
		'++'
		| '--'
	)
	|
	(
		'+'
		| '-'
		| '++'
		| '--'
	) expression
	|
	(
		'~'
		| '!'
	) expression
	| expression
	(
		'*'
		| '/'
		| '%'
	) expression
	| expression
	(
		'+'
		| '-'
	) expression
	| expression
	(
		'<' '<'
		| '>' '>' '>'
		| '>' '>'
	) expression
	| expression
	(
		'<='
		| '>='
		| '>'
		| '<'
	) expression
	| expression 'instanceof' type
	| expression
	(
		'=='
		| '!='
	) expression
	| expression '&' expression
	| expression '^' expression
	| expression '|' expression
	| expression '&&' expression
	| expression '||' expression
	| expression '?' expression ':' expression
	| < assoc = right > expression
	(
		'='
		| '+='
		| '-='
		| '*='
		| '/='
		| '&='
		| '|='
		| '^='
		| '>>='
		| '>>>='
		| '<<='
		| '%='
	) expression
;

primary
:
	'(' expression ')'
	| 'this'
	| 'super'
	| literal
	| Identifier
	| type '.' 'class'
	| 'void' '.' 'class'
	| nonWildcardTypeArguments
	(
		explicitGenericInvocationSuffix
		| 'this' arguments
	)
;

creator
:
	nonWildcardTypeArguments createdName classCreatorRest
	| createdName
	(
		arrayCreatorRest
		| classCreatorRest
	)
;

createdName
:
	Identifier typeArgumentsOrDiamond?
	(
		'.' Identifier typeArgumentsOrDiamond?
	)*
	| primitiveType
;

innerCreator
:
	Identifier nonWildcardTypeArgumentsOrDiamond? classCreatorRest
;

arrayCreatorRest
:
	'['
	(
		']'
		(
			'[' ']'
		)* arrayInitializer
		| expression ']'
		(
			'[' expression ']'
		)*
		(
			'[' ']'
		)*
	)
;

classCreatorRest
:
	arguments classBody?
;

explicitGenericInvocation
:
	nonWildcardTypeArguments explicitGenericInvocationSuffix
;

nonWildcardTypeArguments
:
	'<' typeList '>'
;

typeArgumentsOrDiamond
:
	'<' '>'
	| typeArguments
;

nonWildcardTypeArgumentsOrDiamond
:
	'<' '>'
	| nonWildcardTypeArguments
;

superSuffix
:
	arguments
	| '.' Identifier arguments?
;

explicitGenericInvocationSuffix
:
	'super' superSuffix
	| Identifier arguments
;

arguments
:
	'(' expressionList? ')'
;
